Crooch_Chatbot_Render/stderr.log
Traceback (most recent call last):
  File "/home/iutyepw8/assistant.djcrooch.ca/pythonapp/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'app.py')
  File "app.py", line 8
    def passenger_wsgi.py(environ, start_response):
                      ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/iutyepw8/assistant.djcrooch.ca/pythonapp/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'app.py')
  File "app.py", line 8
    def passenger_wsgi.py(environ, start_response):
                      ^
SyntaxError: invalid syntax
[UID:3481][17840] Child process with pid: 17869 was killed by signal: 15, core dump: 0
Traceback (most recent call last):
  File "/home/iutyepw8/assistant.djcrooch.ca/pythonapp/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'app.py')
  File "app.py", line 8
    def passenger_wsgi.py(environ, start_response):
                      ^
SyntaxError: invalid syntax
[UID:3481][17840] Child process with pid: 17871 was killed by signal: 15, core dump: 0
